tests/errors/redefined-global.ink
// @test error

int x;
float x;

fn main() : int
{
	return 0;
}
